2005-02-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/net/URI/URITest.java (test): Added Classpath
	regression test.  Use 'testOne' method.
	(testOne): New method.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/Serializable/MySerializable.java: Added
	tag.
	* gnu/testlet/java/io/Serializable/readResolve.java: Added Uses.

2005-02-08  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/SimpleDateFormat/applyPattern.java,
	gnu/testlet/java/text/SimpleDateFormat/applyLocalizedPattern.java,
	gnu/testlet/java/text/SimpleDateFormat/toPattern.java,
	gnu/testlet/java/text/SimpleDateFormat/toLocalizedPattern.java: 
	New tests.
	
2005-02-08  Timo Lindfors  <timo.lindfors@iki.fi>

	* gnu/testlet/java/util/regex/PatternSplit.java (test): Added
	Classpath regression test.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/ClassLoader/redefine.java: New file.

2005-02-06 Audrius Meskauskas <audriusa@bluewin.ch>
	* gnu/testlet/javax/swing/text/html/HTML/HTML_Test.java,
	gnu/testlet/javax/swing/text/html/parser/AttributeList/AttributeList_test.java 
	gnu/testlet/javax/swing/text/html/parser/DTD/DTD_test.java,
	gnu/testlet/javax/swing/text/html/parser/Element/Element_Test.java,
	gnu/testlet/javax/swing/text/html/parser/Entity/Entity_Test.java,
	gnu/testlet/javax/swing/text/html/parser/TagElement/TagElement_Test.java:
	Code optimizations only.
	
2005-02-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/SimpleDateFormat/constructors.java, 
	gnu/testlet/java/text/SimpleDateFormat.java: New tests.
	
2005-02-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/io/Serializable/readResolve.java, 
	gnu/testlet/java/io/Serializable/MySerializable.java: 
	New test and support class.

2005-02-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/DecimalFormat/equals.java: New tests.
	
2005-02-07  Thomas Zander <zander@kde.org>